Improved minor features

--- a/assessments/static/assessments/css/list_interviews.css
+++ b/assessments/static/assessments/css/list_interviews.css
@@ -1,6 +1,7 @@
 /* Assessments Container */
 .assessments-container {
-    max-width: 1200px;
+    width: 100%;
+    height: 100%;
     margin: 0 auto;
     padding: 0 1rem;
 }
