--- a/users/templates/users/dashboard.html
+++ b/users/templates/users/dashboard.html
@@ -165,7 +165,8 @@
 <style>
 /* Dashboard Layout */
 .dashboard-container {
-    max-width: 1200px;
+    height: 100%;
+    width: 100%;
     margin: 0 auto;
     padding: 0 1rem;
 }
