--- a/interview_technical/templates/interview_technical/setup.html
+++ b/interview_technical/templates/interview_technical/setup.html
@@ -5,7 +5,7 @@
 {% block extra_css %}
 <div id="extra_css_block">
     {% load static %}
-    <link rel="stylesheet" href="{% static 'users/css/setup.css' %}">
+    <link rel="stylesheet" href="{% static 'users/css/setup.css' %}?v={{ STATIC_VERSION }}">
 </div>
 {% endblock %}
 
