Dynamic resizing in technical interview

--- a/interview_technical/templates/interview_technical/index.html
+++ b/interview_technical/templates/interview_technical/index.html
@@ -55,6 +55,9 @@
                 </div>
             </div>
 
+            <!-- Resize Handle -->
+            <div class="resize-handle" id="question-editor-resize"></div>
+
             <!-- Editor Section -->
             <div class="editor-container">
                 <div id="editor"></div>
@@ -69,6 +72,11 @@
                         <div class="dot"></div>
                         <span id="timer-display">00:00</span>
                     </div>
+                    <button id="toggle-video" class="toggle-video-btn" title="Toggle Video">
+                        <svg width="16" height="16" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
+                            <path d="M19 9l-7 4-7-4V6l7 4 7-4v3z" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"/>
+                        </svg>
+                    </button>
                 </div>
 
                 <!-- Chat Interface -->
