--- a/users/templates/users/base.html
+++ b/users/templates/users/base.html
@@ -34,8 +34,7 @@
                             <span class="material-icons arrow">expand_more</span>
                         </button>
                         <div class="nav-group-items">
-                            <a href="{% url 'interview_technical:setup' %}" class="nav-item sub-item {% if active_page == 'technical' %}active{% endif %}" 
-                               onclick="loadContent(event, this.href)">
+                            <a href="{% url 'interview_technical:setup' %}" class="nav-item sub-item {% if active_page == 'technical' %}active{% endif %}">
                                 <span class="material-icons">code</span>
                                 Technical
                             </a>
