--- a/interview_behavioral/templates/interview_behavioral/setup.html
+++ b/interview_behavioral/templates/interview_behavioral/setup.html
@@ -46,7 +46,7 @@
         
         .modal-header h2 {
             margin: 0;
-            color:rgb(255, 255, 255);
+            color: #ffffff !important;
             font-size: 1.6rem;
             font-weight: 700;
             text-align: center;
